--- a/style.css
+++ b/style.css
@@ -3,3 +3,73 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.container {
+    width: 1600px;
+    display: flex;
+    justify-content: center;
+}
+.left_side {
+    width: 600px;
+    background: rgb(15, 15, 15);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: aliceblue;
+}
+h1, h2, h3 {
+    color: rgb(180, 140, 64);
+}
+
+.img_person img {
+    margin-top: 50px;
+    width: 500px;
+    height:600px;
+}
+
+li {
+    /* list-style-type: none; */
+}
+
+.right_side {
+    width: 1000px;
+    background: rgb(232, 226, 226);
+    padding-left: 50px;
+}
+
+.skills {
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+}
+
+.skills ul {
+    margin-top: 30px;
+    margin-left: 20px;
+}
+
+.contacts {
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+}
+
+.contacts ul {
+    margin-top: 30px;
+    margin-left: 20px;
+}
+
+.contacts li {
+    list-style-type: none;
+    margin-bottom: 5px;
+}
+
+.name {
+    margin-top: 150px;
+}
+
+.name h1 {
+    font-size: 60px;
+}
