--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: rgb(36, 36, 36);
 }
 
 .container {
@@ -17,7 +18,7 @@
     align-items: center;
     color: aliceblue;
 }
-h1, h2, h3 {
+h1, h2,h3 {
     color: rgb(180, 140, 64);
 }
 
@@ -72,4 +73,18 @@ li {
 
 .name h1 {
     font-size: 60px;
+}
+
+.name h2 {
+    color: gray;
+    margin-top: 10px;
+}
+
+.my_story {
+    margin-top: 50px;
+}
+
+.experience {
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
