--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: rgb(36, 36, 36);
+
 }
 
 .container {
@@ -87,4 +87,19 @@ li {
 .experience {
     margin-top: 50px;
     margin-bottom: 50px;
+}
+
+.experience h2 {
+    margin-bottom: 10px;
+}
+
+.experience h4 {
+    font-size: 24px;
+    margin-bottom: 10px;
+    color: rgb(79, 79, 251);
+}
+
+.experience ul {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
